1.5.0 -> Migrated from OBJModel to Model for every Tile-Renderer (Not yet migrated: Item-Renderer; Temp. deactivated: FlareUtils)